--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,17 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@chroma-core/default-embed": "^0.1.8",
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^2.4.3",
+    "chromadb": "^3.0.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "openai": "^5.8.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
