--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@mediapipe/pose": "^0.5.1675469404",
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.0",
@@ -20,6 +21,7 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.21.0",
     "react-toastify": "^11.0.5",
     "three": "^0.161.0"
